[project]
name = "iterator-nodes"
description = "This is a set of ComfyUI nodes that traverse specific folders to sequentially deliver images, prompts, video files (split into image sequences), entire video files, and individually upload video files via an API (OpenAI format) to corresponding LLM for subsequent nodes."
version = "1.0.4"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/GHOSTLXH/ComfyUI-iterator-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ghostlxh"
DisplayName = "ComfyUI-iterator-nodes"
Icon = ""
