[project]
name = "iterator-nodes"
description = "Here are several ComfyUI nodes that traverse specific folders to sequentially deliver images, prompts, video files (split into image sequences), entire video files, and video files first split into keyframe sequences at specific intervals to subsequent nodes, which then upload them to the corresponding large models via an API (OpenAI format)."
version = "1.0.5"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/GHOSTLXH/ComfyUI-iterator-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ghostlxh"
DisplayName = "ComfyUI-iterator-nodes"
Icon = ""
